# server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  config.toml  rustfmt.toml
.github/workflows/: docker.yaml
.sqlx/: query-1bfab16f21e741b5935a4adb5a4443c9d4f5fa9ab2463b3b70d22c64e1110c3c.json  query-2e7993f59969f31ea53542ab3929a2c400e78424c908557fb135c0191a2b84ec.json  query-3239174ac58746daf3899ec78e05d7a873ea2c59470c61f4fc33278452d3b025.json  query-374c68d4d2e07c8ece5512bda82a087c1e675d108ef4eeb0f8d20b79a9ea3c95.json  query-43df4ca1831757db1696377c2f7deebf815de65989c014a4f89f288b204071eb.json  query-561ef49eb4eb61627762806ef60d56272b0bc5345a698567cf48c4744c2b7f6f.json  query-614acffdd49e1af104b65d65d06f914565ccf4b3d67ad48da8006ed397ac1292.json  query-8368ac3cf971936a8b6f58e6bdc638836f9c09e2761f5e554a83e0b15325e315.json  query-891b71685cab553a58047ed740ee1a59660f5e032262a1147a0065a79701967f.json  query-e855ed72522d26fefca27839ec852c6abfeb2d1acd610bc97d08c120b7aa7479.json  query-f6ba748823c57a4283b4a13a2fda7694417902cfea2531626ddf259383cf15e3.json
docs/: README.md
migrations/: 20260331210901_channels.down.sql  20260331210901_channels.up.sql  20260331220120_messages.down.sql  20260331220120_messages.up.sql
src/: app.rs  broadcaster.rs  config.rs  crypto.rs  env.rs  error.rs  main.rs
src/db/: channels.rs  messages.rs  mod.rs
src/routes/: auth.rs  icon.rs  info.rs  mod.rs  root.rs  socket_io.rs  ws.rs
src/routes/socket_io/: admin.rs  auth.rs  message.rs  mod.rs
