[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.4", features = ["cors"] }
axum = { version = "0.8.8", features = ["ws"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
log = "0.4.29"
simple_logger = "5.1.0"

[profile.release]
opt-level = "z"
strip = true
lto = true
